<resources>
    <string name="app_name">Stock Control</string>

    <string name="guardarSesion">Guardar sesión</string>

    //Menú
    <string name="ver_almacen">Ver almacén</string>
    <string name="salida_material">Salida de material</string>
    <string name="pendientes">Pendientes</string>
    <string name="ver_usuarios">Usuarios</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="add_almacen">Nuevo Almacén</string>
    <string name="add_usuario">Nuevo Usuario</string>
    <string name="cambiar_password">Cambiar contraseña</string>

    <string name="productos">Productos</string>
    <string name="solicitud_productos">Solicitud de Productos</string>
</resources>