<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:gravity="center_horizontal"
                android:text="Elige una opcion"
                android:textColor="@color/naranja"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_verAlmacen"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/azul_a"
                android:onClick="opcionAlmacen"
                android:text="@string/ver_almacen"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_pendientes"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/azul_a"
                android:text="@string/pendientes"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_salidaMaterial"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/azul_a"
                android:text="@string/salida_material"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_agregarUsuario"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/azul_a"
                android:onClick="opcionUsuario"
                android:text="@string/ver_usuarios"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btn_cerrarSesion"
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@color/azul_a"
                android:text="@string/cerrar_sesion"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>